<resources>
    <string name="app_name">BubbleTabBarApp</string>
    <string name="vp_integrations">ViewPager\nIntegration</string>
    <string name="vp2_integrations">ViewPager2\nIntegration</string>
    <string name="nc_integrations">NavigationController\nIntegration</string>
    <string name="home">Trang chủ</string>
    <string name="trending">Xu hướng</string>
    <string name="tv">TV</string>
    <string name="short_news">Tin nhanh</string>
    <string name="account">Tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
