<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
    <item
            android:id="@+id/trending"
            android:icon="@drawable/ic_trending"
            android:title="@string/trending" />
    <item
            android:id="@+id/tv"
            android:icon="@drawable/ic_tv"
            android:title="@string/tv" />

    <item
            android:id="@+id/short_news"
            android:icon="@drawable/ic_short"
            android:title="@string/short_news"/>
    <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/account"/>
</menu>
